--- a/package.json
+++ b/package.json
@@ -1,11 +1,5 @@
 {
-  "name": "i2p",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "nikhil",
-  "license": "ISC",
-  "description": ""
+  "devDependencies": {
+    "prettier": "^3.6.2"
+  }
 }
